--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.splash=C:\\Users\\Sasi Praveen\\Documents\\NetBeansProjects\\SmartHelmetServer\\splashscreen.png
 application.title=SmartHelmetServer
 application.vendor=Sasi Praveen
 build.classes.dir=${build.dir}/classes
